# modules/Article/routes.php
@@ -4,5 +4,8 @@ use Illuminate\Support\Facades\Route;
 use Modules\Article\Http\Controllers\ArticleController;
 
 Route::prefix('api')->group(function () {
-    Route::get('articles', [ArticleController::class, 'index']);
+    Route::prefix('articles')->group(function () {
+        Route::get('/', [ArticleController::class, 'index']);
+        Route::post('/store', [ArticleController::class, 'store'])->middleware('auth:sanctum');
+    });
 });
