# storage/api-docs/api-docs.json
@@ -270,6 +270,64 @@
                 }
             }
         },
+        "/api/articles/store": {
+            "post": {
+                "tags": [
+                    "Article"
+                ],
+                "summary": "Create article",
+                "operationId": "7895eca6cefd861b480c9fe8ea5c4f37",
+                "requestBody": {
+                    "description": "create article",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object"
+                            },
+                            "example": {
+                                "title": "Article Title",
+                                "description": "Article description"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "200": {
+                        "description": "Create article",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "example": {
+                                                "title": "Article Title",
+                                                "description": "Article description",
+                                                "updated_at": "2024-02-03T16:53:20.000000Z",
+                                                "created_at": "2024-02-03T16:53:20.000000Z",
+                                                "images": [
+                                                    "https://gssc.esa.int/navipedia/images/a/a9/Example.jpg"
+                                                ]
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
         "/api/checkout": {
             "post": {
                 "tags": [
@@ -407,7 +465,7 @@
                                             "items": {
                                                 "type": "object",
                                                 "example": {
-                                                    "title": "Product",
+                                                    "title": "Product Title",
                                                     "description": "Product description",
                                                     "stock": 111,
                                                     "price": 10.1,
@@ -457,26 +515,21 @@
                         "description": "Unauthorized"
                     },
                     "200": {
-                        "description": "Display products",
+                        "description": "Create product",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
                                         "data": {
-                                            "title": "products",
-                                            "type": "array",
-                                            "items": {
-                                                "type": "object",
-                                                "example": {
-                                                    "title": "Product",
-                                                    "description": "Product description",
-                                                    "category": "Product category",
-                                                    "updated_at": "2024-02-03T16:53:20.000000Z",
-                                                    "created_at": "2024-02-03T16:53:20.000000Z",
-                                                    "images": [
-                                                        "https://gssc.esa.int/navipedia/images/a/a9/Example.jpg"
-                                                    ]
-                                                }
+                                            "type": "object",
+                                            "example": {
+                                                "title": "Product Title",
+                                                "description": "Product description",
+                                                "updated_at": "2024-02-03T16:53:20.000000Z",
+                                                "created_at": "2024-02-03T16:53:20.000000Z",
+                                                "images": [
+                                                    "https://gssc.esa.int/navipedia/images/a/a9/Example.jpg"
+                                                ]
                                             }
                                         }
                                     },
